Added a functionality that periodically trains a neural network from the data and uses it to make predictions that are added to reports

--- a/templates/report_template_FI.html
+++ b/templates/report_template_FI.html
@@ -36,6 +36,8 @@
                     <b>Takakengät: EI</b>
                 {% endif %}
 
+                <b>Power score: {{horse['prediction']}}</b>
+
                 <table class="table">
                     <thead>
                         <tr>
