Added avg time to template report

--- a/templates/report_template_FI.html
+++ b/templates/report_template_FI.html
@@ -35,8 +35,10 @@
                 {% else %}
                     <b>Takakengät: EI</b>
                 {% endif %}
-
-                <b>Power score: {{horse['prediction']}}</b>
+                <br>
+                <b>Voimaluku: {{horse['prediction']}}</b>
+                <br>
+                <b>Keskiarvoaika: {{horse['avg_time']}}</b>
 
                 <table class="table">
                     <thead>
